remove file name for saveas only for remote files

or for the case we use the file of some other view to have
some better start directory

BUG: 461161